# sfml_pvz

./: .gitignore  CMakeLists.txt  README.md  demo  main  main.cpp  run.sh
.VSCodeCounter/2025-05-21_15-42-58/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-06-16_21-42-16/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.json  results.md
json/: UI.json  bullet.json  plant.json  zombie.json
resource/: rename.sh
resource/zombie/normal/other/: rename.sh
resource/zombie/normal/other/zombie_attack/: rename.sh
src/: defines.h  defines.hpp  demo.cpp  event_manager.cpp  event_manager.hpp  game.h  test  test.cpp
src/UI/: background.cpp  background.hpp  defines.cpp  defines.hpp  ui_layout.cpp  ui_layout.hpp
src/animation/: animation.cpp  animation.h  base.cpp  base.h  event_handler.cpp  event_handler.hpp  gamescene.cpp  gamescene.h  gamescene.hpp  test  test.cpp
src/base/: attack_range.cpp  attack_range.hpp  direction.cpp  direction.hpp  eventhandler.hpp  frame.hpp  frame_timer.hpp  range.cpp  range.hpp  test  test.cpp  timer.h  tools.cpp  tools.h  tools.hpp
src/components/: CMakeLists.txt  animation_comp.cpp  animation_comp.hpp  attack_comp.cpp  attack_comp.hpp  cd.cpp  cd.hpp  component.hpp  component_factory.hpp  hp_comp.cpp  hp_comp.hpp  movement_comp.cpp  movement_comp.hpp  position_comp.cpp  position_comp.hpp  problem.md  template.txt  timer_comp.hpp
src/draw/: drawable.cpp  drawable.h
src/entity/: CMakeLists.txt  attack.cpp  attack.hpp  background.hpp  defines.hpp  entity.cpp  entity.h  entity.hpp  frame.hpp  plant.cpp  plant.h  plant.hpp  template.txt  tool.cpp  tool.h  zombie.h  zombie.hpp
src/entity/bullet/: bullet.cpp  bullet.hpp  factory.cpp  factory.hpp  pea.hpp
src/entity/components/: animation_comp.cpp  animation_comp.hpp  attack_comp.cpp  attack_comp.hpp  component.cpp  component.hpp  component_factory.hpp  hp_comp.hpp  movement_comp.cpp  movement_comp.hpp  position_comp.cpp  position_comp.hpp  template.txt
src/entity/plant/: attack.cpp  attack.hpp  factory.cpp  factory.hpp  mine_plant.cpp  mine_plant.hpp  plant.cpp  plant.hpp  shooter_plant.cpp  shooter_plant.hpp
src/entity/tool/: card.cpp  card.hpp  plant_creator.cpp  plant_creator.hpp  spade.cpp  spade.hpp  tool.cpp  tool.hpp  zombie_creator.cpp  zombie_creator.hpp
src/entity/trash/: attack.cpp  attack.h  plant.cpp  plant.h  tool.cpp  tool.h
src/entity/zombie/: factory.cpp  factory.hpp  zombie.cpp  zombie.hpp
src/movement/: base.h
src/player/: game_player.hpp
src/system/: base.cpp  base.hpp  collision_system.cpp  collision_system.hpp  init.cpp  init.hpp
